language/move-lang/tests/move_check/expansion/use_spec_schema_as_struct.exp
error[E03003]: unbound module member
   ┌─ tests/move_check/expansion/use_spec_schema_as_struct.move:10:14
   │
10 │     fun t(): Foo<u64> {
   │              ^^^ Invalid module access. Unbound struct 'Foo' in module '0x2::X'

