language/move-lang/tests/move_check/expansion/use_spec_schema_as_struct.move
address 0x2 {
module X {
    spec schema Foo<T> {
        ensures true;
    }
}

module M {
    use 0x2::X::Foo;
    fun t(): Foo<u64> {
        abort 0
    }
}

}
